--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ name: Rodney Borrego Acevedo (20/06/2019)
 output: html_document
 ---
 
-```{r loading packagess, include=FALSE}
+```{r loading packages, include=FALSE}
 
 library(dplyr)
 library(mgcv)
@@ -19,10 +19,10 @@ library(tidyverse)
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Validation of Cairns_Cooktown's EOMAP depth layers derived from Landsat and Sentinel vs acoustic validation data
+# Validation of EOMAP depth layers derived from Landsat and Sentinel vs acoustic validation data for Cairns-Cooktown region of the GBR
 
 
-This document shows regression plots between EOMAP depth layer derived from Landsat (EOMAP_Landsat) vs acoustic validation data and EOMAP depth layer derived from Sentinel (EOMAP_Sentinel) vs acoustic validation data. The figure below shows the location of acoustic validation data.
+This document shows linear regressions between EOMAP depth layer derived from Landsat (EOMAP_Landsat) vs acoustic validation data and EOMAP depth layer derived from Sentinel (EOMAP_Sentinel) vs acoustic validation data. The figure below shows the location of acoustic validation data.
 
 
 ![](20190214_TideDoveData_EOMAP.jpg)
