--- a/index.Rmd
+++ b/index.Rmd
@@ -20,6 +20,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This document shows regression plots between EOMAP depth layer derived from Landsat (EOMAP_Landsat) vs acoustic validation data and EOMAP depth layer derived from Sentinel (EOMAP_Sentinel) vs acoustic validation data. The figure below shows the location of acoustic validation data.
 
+# this is markdown to import the image at the begginning of the web page
 
 ![](20190214_TideDoveData_EOMAP.jpg)
 
